--- a/arch/arm/boot/dts/imx6qdl.dtsi
+++ b/arch/arm/boot/dts/imx6qdl.dtsi
@@ -331,6 +331,7 @@
 				interrupts = <0 110 0x04>;
 				clocks = <&clks 108>, <&clks 109>;
 				clock-names = "ipg", "per";
+				status = "disabled";
 			};
 
 			can2: flexcan@02094000 {
@@ -339,6 +340,7 @@
 				interrupts = <0 111 0x04>;
 				clocks = <&clks 110>, <&clks 111>;
 				clock-names = "ipg", "per";
+				status = "disabled";
 			};
 
 			gpt: gpt@02098000 {
@@ -557,6 +559,7 @@
 				reg = <0x020c9000 0x1000>;
 				interrupts = <0 44 0x04>;
 				clocks = <&clks 182>;
+				fsl,anatop = <&anatop>;
 			};
 
 			usbphy2: usbphy@020ca000 {
@@ -564,6 +567,19 @@
 				reg = <0x020ca000 0x1000>;
 				interrupts = <0 45 0x04>;
 				clocks = <&clks 183>;
+				fsl,anatop = <&anatop>;
+			};
+
+			usbphy_nop1: usbphy_nop1 {
+				compatible = "usb-nop-xceiv";
+				clocks = <&clks 182>;
+				clock-names = "main_clk";
+			};
+
+			usbphy_nop2: usbphy_nop2 {
+				compatible = "usb-nop-xceiv";
+				clocks = <&clks 182>;
+				clock-names = "main_clk";
 			};
 
 			snvs@020cc000 {
@@ -657,6 +673,16 @@
 					};
 				};
 
+				ecspi2 {
+					pinctrl_ecspi2_1: ecspi2grp-1 { /* DHCOM configuration */
+						fsl,pins = <
+							MX6QDL_PAD_CSI0_DAT10__ECSPI2_MISO 0x100b1
+							MX6QDL_PAD_CSI0_DAT9__ECSPI2_MOSI  0x100b1
+							MX6QDL_PAD_CSI0_DAT8__ECSPI2_SCLK  0x100b1
+						>;
+					};
+				};
+
 				ecspi3 {
 					pinctrl_ecspi3_1: ecspi3grp-1 {
 						fsl,pins = <
@@ -729,6 +755,22 @@
 							MX6QDL_PAD_ENET_TX_EN__ENET_TX_EN     0x1b0b0
 						>;
 					};
+
+					pinctrl_enet_4: enetgrp-4 { /* DHCOM configuration */
+						fsl,pins = <
+							MX6QDL_PAD_ENET_MDIO__ENET_MDIO       0x1b0b0
+							MX6QDL_PAD_ENET_MDC__ENET_MDC         0x1b0b0
+							MX6QDL_PAD_ENET_CRS_DV__ENET_RX_EN    0x1b0b0
+							MX6QDL_PAD_ENET_RX_ER__ENET_RX_ER     0x1b0b0
+							MX6QDL_PAD_ENET_RXD0__ENET_RX_DATA0   0x1b0b0
+							MX6QDL_PAD_ENET_RXD1__ENET_RX_DATA1   0x1b0b0
+							MX6QDL_PAD_ENET_TX_EN__ENET_TX_EN     0x1b0b0
+							MX6QDL_PAD_ENET_TXD0__ENET_TX_DATA0   0x1b0b0
+							MX6QDL_PAD_ENET_TXD1__ENET_TX_DATA1   0x1b0b0
+							MX6QDL_PAD_GPIO_16__ENET_REF_CLK      0x4001b0a8
+							MX6QDL_PAD_RGMII_RD0__GPIO6_IO25      0x1b0b0    /* ENET_INT */
+						>;
+					};
 				};
 
 				esai {
@@ -774,6 +816,13 @@
 						fsl,pins = <
 							MX6QDL_PAD_GPIO_7__FLEXCAN1_TX   0x80000000
 							MX6QDL_PAD_KEY_ROW2__FLEXCAN1_RX 0x80000000
+						>;
+					};
+
+					pinctrl_flexcan1_3: flexcan1grp-3 { /* DHCOM configuration */
+						fsl,pins = <
+							MX6QDL_PAD_KEY_COL2__FLEXCAN1_TX 0x80000000
+							MX6QDL_PAD_GPIO_8__FLEXCAN1_RX   0x80000000
 						>;
 					};
 				};
@@ -992,6 +1041,40 @@
 							MX6QDL_PAD_CSI0_VSYNC__IPU1_CSI0_VSYNC   0x80000000
 						>;
 					};
+
+					pinctrl_ipu1_4: ipu1grp-4 { /* DHCOM configuration */
+						fsl,pins = <
+							MX6QDL_PAD_DI0_DISP_CLK__IPU1_DI0_DISP_CLK 0x10         /* RGB_PCLK        */
+							MX6QDL_PAD_DI0_PIN15__IPU1_DI0_PIN15       0x10         /* RGB_DATA_EN     */
+							MX6QDL_PAD_DI0_PIN2__IPU1_DI0_PIN02        0x10         /* RGB_HSYNC       */
+							MX6QDL_PAD_DI0_PIN3__IPU1_DI0_PIN03        0x10         /* RGB_VSYNC       */
+						//	MX6QDL_PAD_DI0_PIN4__IPU1_DI0_PIN04        0x80000000   /* Used as GPIO F  */
+							MX6QDL_PAD_DISP0_DAT0__IPU1_DISP0_DATA00   0x10
+							MX6QDL_PAD_DISP0_DAT1__IPU1_DISP0_DATA01   0x10
+							MX6QDL_PAD_DISP0_DAT2__IPU1_DISP0_DATA02   0x10
+							MX6QDL_PAD_DISP0_DAT3__IPU1_DISP0_DATA03   0x10
+							MX6QDL_PAD_DISP0_DAT4__IPU1_DISP0_DATA04   0x10
+							MX6QDL_PAD_DISP0_DAT5__IPU1_DISP0_DATA05   0x10
+							MX6QDL_PAD_DISP0_DAT6__IPU1_DISP0_DATA06   0x10
+							MX6QDL_PAD_DISP0_DAT7__IPU1_DISP0_DATA07   0x10
+							MX6QDL_PAD_DISP0_DAT8__IPU1_DISP0_DATA08   0x10
+							MX6QDL_PAD_DISP0_DAT9__IPU1_DISP0_DATA09   0x10
+							MX6QDL_PAD_DISP0_DAT10__IPU1_DISP0_DATA10  0x10
+							MX6QDL_PAD_DISP0_DAT11__IPU1_DISP0_DATA11  0x10
+							MX6QDL_PAD_DISP0_DAT12__IPU1_DISP0_DATA12  0x10
+							MX6QDL_PAD_DISP0_DAT13__IPU1_DISP0_DATA13  0x10
+							MX6QDL_PAD_DISP0_DAT14__IPU1_DISP0_DATA14  0x10
+							MX6QDL_PAD_DISP0_DAT15__IPU1_DISP0_DATA15  0x10
+							MX6QDL_PAD_DISP0_DAT16__IPU1_DISP0_DATA16  0x10
+							MX6QDL_PAD_DISP0_DAT17__IPU1_DISP0_DATA17  0x10
+							MX6QDL_PAD_DISP0_DAT18__IPU1_DISP0_DATA18  0x10
+							MX6QDL_PAD_DISP0_DAT19__IPU1_DISP0_DATA19  0x10
+							MX6QDL_PAD_DISP0_DAT20__IPU1_DISP0_DATA20  0x10
+							MX6QDL_PAD_DISP0_DAT21__IPU1_DISP0_DATA21  0x10
+							MX6QDL_PAD_DISP0_DAT22__IPU1_DISP0_DATA22  0x10
+							MX6QDL_PAD_DISP0_DAT23__IPU1_DISP0_DATA23  0x10
+						>;
+					};
 				};
 
 				mlb {
@@ -1056,6 +1139,18 @@
 							MX6QDL_PAD_CSI0_DAT11__UART1_RX_DATA 0x1b0b1
 						>;
 					};
+					pinctrl_uart1_2: uart1grp-2 { /* DHCOM configuration */
+						fsl,pins = <
+							MX6QDL_PAD_SD3_DAT7__UART1_TX_DATA 0x1b0b1
+							MX6QDL_PAD_SD3_DAT6__UART1_RX_DATA 0x1b0b1
+							MX6QDL_PAD_EIM_D19__UART1_RTS_B 0x1b0b1
+							MX6QDL_PAD_EIM_D20__UART1_CTS_B 0x1b0b1
+							MX6QDL_PAD_EIM_D23__UART1_DCD_B 0x1b0b1
+							MX6QDL_PAD_EIM_D24__UART1_DTR_B 0x1b0b1 
+							MX6QDL_PAD_EIM_D25__UART1_DSR_B 0x1b0b1 
+							MX6QDL_PAD_EIM_EB3__UART1_RI_B 0x1b0b1  
+						>;
+					};
 				};
 
 				uart2 {
@@ -1101,6 +1196,24 @@
 						fsl,pins = <
 							MX6QDL_PAD_KEY_COL0__UART4_TX_DATA 0x1b0b1
 							MX6QDL_PAD_KEY_ROW0__UART4_RX_DATA 0x1b0b1
+						>;
+					};
+					
+					pinctrl_uart4_2: uart4grp-2 { /* DHCOM configuration */
+						fsl,pins = <
+							MX6QDL_PAD_CSI0_DAT12__UART4_TX_DATA 0x1b0b1
+							MX6QDL_PAD_CSI0_DAT13__UART4_RX_DATA 0x1b0b1
+						>;
+					};
+				};
+				
+				uart5 {
+					pinctrl_uart5_1: uart5grp-1 { /* DHCOM configuration */
+						fsl,pins = <
+							MX6QDL_PAD_CSI0_DAT14__UART5_TX_DATA 0x1b0b1
+							MX6QDL_PAD_CSI0_DAT15__UART5_RX_DATA 0x1b0b1
+							MX6QDL_PAD_CSI0_DAT18__UART5_CTS_B 0x1b0b1
+							MX6QDL_PAD_CSI0_DAT19__UART5_RTS_B 0x1b0b1
 						>;
 					};
 				};
