--- a/drivers/uio/Kconfig
+++ b/drivers/uio/Kconfig
@@ -23,7 +23,43 @@ config UIO_CIF
 
 	  To compile this driver as a module, choose M here: the module
 	  will be called uio_cif.
+	  
+config UIO_CFI2
+	tristate "Userspace I/O driver to support Bosch CFI2 FPGA general"
+	help
+	  Driver for Bosch CFI2 FPGA. CFI2 Hardware is designed by DH-electronics.
 
+	  To compile this driver as a module, choose M here: the module
+	  will be called uio_cfi2.
+
+config UIO_CFI2_UART0
+	tristate "Userspace I/O driver to support Bosch CFI2 UART0"
+	help
+	  Driver for Bosch CFI2 FPGA. CFI2 Hardware is designed by DH-electronics.
+
+	  To compile this driver as a module, choose M here: the module
+	  will be called uio_cfi2.
+	select UIO_CFI2
+
+config UIO_CFI2_UART1
+	tristate "Userspace I/O driver to support Bosch CFI2 UART1"
+	help
+	  Driver for Bosch CFI2 FPGA. CFI2 Hardware is designed by DH-electronics.
+
+	  To compile this driver as a module, choose M here: the module
+	  will be called uio_cfi2.
+	select UIO_PDRV
+	select UIO_CFI2
+
+config UIO_CFI2_UART2
+	tristate "Userspace I/O driver to support Bosch CFI2 UART2"
+	help
+	  Driver for Bosch CFI2 FPGA. CFI2 Hardware is designed by DH-electronics.
+
+	  To compile this driver as a module, choose M here: the module
+	  will be called uio_cfi2.
+	select UIO_CFI2
+	
 config UIO_PDRV_GENIRQ
 	tristate "Userspace I/O platform driver with generic IRQ handling"
 	help
