--- a/arch/arm/configs/imx6_dhcom_defconfig
+++ b/arch/arm/configs/imx6_dhcom_defconfig
@@ -2577,6 +2577,10 @@ CONFIG_DMA_OF=y
 # CONFIG_DMATEST is not set
 # CONFIG_AUXDISPLAY is not set
 CONFIG_UIO=y
+CONFIG_UIO_CFI2=y
+CONFIG_UIO_CFI2_UART0=y
+CONFIG_UIO_CFI2_UART1=y
+CONFIG_UIO_CFI2_UART2=y
 # CONFIG_UIO_PDRV_GENIRQ is not set
 # CONFIG_UIO_DMEM_GENIRQ is not set
 # CONFIG_VIRT_DRIVERS is not set
