--- a/arch/arm/boot/dts/imx6qdl-dhcom.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-dhcom.dtsi
@@ -107,6 +107,7 @@
 };
 
 &i2c1 {									// ********** I2C 1 **********
+									// ==> /dev/i2c-0
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1_1>;
@@ -114,13 +115,15 @@
 };
 
 &i2c2 {									// ********** I2C 2 **********
+									// ==> /dev/i2c-1
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c2_2>;
 	status = "okay";
 };
 
-&i2c3 {									// ********** I2C 3 **********
+&i2c3 {									// ****** I2C on Board *******
+									// ==> /dev/i2c-2
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c3_2>;
