--- a/arch/arm/boot/dts/imx6qdl-cfi2.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-cfi2.dtsi
@@ -34,6 +34,15 @@
 	};
 };
 
+&i2c1 {										// ********** I2C 1 **********
+										// ==> /dev/i2c-0
+	eeprom@50 {								// Storing boot configuration
+		compatible = "atmel,24c08";
+		reg = <0x50>;
+		pagesize = <16>;
+	};
+};
+
 &weim {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_weim_dhcom_1 &pinctrl_weim_cs0_1>;
