--- a/arch/arm/boot/dts/imx6qdl-cfi2.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-cfi2.dtsi
@@ -113,10 +113,10 @@
 				MX6QDL_PAD_EIM_D27__GPIO3_IO27     0x120B0    // GPIO G
 				MX6QDL_PAD_KEY_ROW0__GPIO4_IO07    0x120B0    // GPIO H
 				MX6QDL_PAD_KEY_COL1__GPIO4_IO08    0x120B0    // GPIO I
-				MX6QDL_PAD_NANDF_CS1__GPIO6_IO14   0x80000000 // GPIO J -> Interrupt UART2 (UIO)
+				MX6QDL_PAD_NANDF_CS1__GPIO6_IO14   0x120B0    // GPIO J -> Interrupt UART2 (UIO)
 				MX6QDL_PAD_NANDF_CS2__GPIO6_IO15   0x120B0    // GPIO K
-				MX6QDL_PAD_KEY_ROW1__GPIO4_IO09    0x80000000 // GPIO L -> Interrupt UART0 (UIO)
-				MX6QDL_PAD_SD3_DAT5__GPIO7_IO00    0x80000000 // GPIO M -> Interrupt UART1 (UIO)
+				MX6QDL_PAD_KEY_ROW1__GPIO4_IO09    0x120B0    // GPIO L -> Interrupt UART0 (UIO)
+				MX6QDL_PAD_SD3_DAT5__GPIO7_IO00    0x120B0    // GPIO M -> Interrupt UART1 (UIO)
 				MX6QDL_PAD_SD3_DAT4__GPIO7_IO01    0x120B0    // GPIO N
 				MX6QDL_PAD_CSI0_VSYNC__GPIO5_IO21  0x120B0    // GPIO O
 				MX6QDL_PAD_GPIO_18__GPIO7_IO13     0x120B0    // GPIO P
