--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -153,14 +153,14 @@ dtb-$(CONFIG_ARCH_MXC) += \
 	imx53-mba53.dtb \
 	imx53-qsb.dtb \
 	imx53-smd.dtb \
-	imx6dl-cfi2.dtb \
+	imx6dl-cfi2-100.dtb \
 	imx6dl-dheva01.dtb \
 	imx6dl-cubox-i.dtb \
 	imx6dl-hummingboard.dtb \
 	imx6dl-sabreauto.dtb \
 	imx6dl-sabresd.dtb \
 	imx6dl-wandboard.dtb \
-	imx6q-cfi2.dtb \
+	imx6q-cfi2-100.dtb \
 	imx6q-dheva01.dtb \
 	imx6q-arm2.dtb \
 	imx6q-cubox-i.dtb \
