imx6_dhcom_defconfig: Add support for ethernet PHYs from SMSC and MICREL

--- a/arch/arm/configs/imx6_dhcom_defconfig
+++ b/arch/arm/configs/imx6_dhcom_defconfig
@@ -122,6 +122,8 @@ CONFIG_SMC91X=y
 CONFIG_SMC911X=y
 CONFIG_SMSC911X=y
 # CONFIG_NET_VENDOR_STMICRO is not set
+CONFIG_SMSC_PHY=y
+CONFIG_MICREL_PHY=y
 CONFIG_USB_USBNET=y
 # CONFIG_USB_NET_AX8817X is not set
 # CONFIG_USB_NET_AX88179_178A is not set
