imx6_dhcom_defconfig: Add Userspace I/O platform driver with generic IRQ handling

--- a/arch/arm/configs/imx6_dhcom_defconfig
+++ b/arch/arm/configs/imx6_dhcom_defconfig
@@ -238,6 +238,7 @@ CONFIG_UIO=y
 CONFIG_UIO_CFI2_UART0=y
 CONFIG_UIO_CFI2_UART1=y
 CONFIG_UIO_CFI2_UART2=y
+CONFIG_UIO_PDRV_GENIRQ=y
 CONFIG_STAGING=y
 CONFIG_DRM_IMX=y
 CONFIG_DRM_IMX_FB_HELPER=y
