Device Tree: HW300: Add files for HW300 and change HW200 files

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -153,17 +153,23 @@ dtb-$(CONFIG_ARCH_MXC) += \
 	imx53-mba53.dtb \
 	imx53-qsb.dtb \
 	imx53-smd.dtb \
-	imx6dl-cfi2-100.dtb \
-	imx6dl-cfi2-200.dtb \
-	imx6dl-dheva01.dtb \
+	imx6d-dhcom2B-pdk1.dtb \
+	imx6d-dhcom3B-pdk2.dtb \
+	imx6dl-dhcom2B-cfi2-100.dtb \
+	imx6dl-dhcom2B-cfi2-200.dtb \
+	imx6dl-dhcom2B-pdk1.dtb \
+	imx6dl-dhcom3B-pdk2.dtb \
+	imx6dl-dhcom3B-cfi2-200.dtb \
 	imx6dl-cubox-i.dtb \
 	imx6dl-hummingboard.dtb \
 	imx6dl-sabreauto.dtb \
 	imx6dl-sabresd.dtb \
 	imx6dl-wandboard.dtb \
-	imx6q-cfi2-100.dtb \
-	imx6q-cfi2-200.dtb \
-	imx6q-dheva01.dtb \
+	imx6q-dhcom2B-cfi2-100.dtb \
+	imx6q-dhcom2B-cfi2-200.dtb \
+	imx6q-dhcom2B-pdk1.dtb \
+	imx6q-dhcom3B-pdk2.dtb \
+	imx6q-dhcom3B-cfi2-200.dtb \
 	imx6q-arm2.dtb \
 	imx6q-cubox-i.dtb \
 	imx6q-phytec-pbab01.dtb \
@@ -173,7 +179,8 @@ dtb-$(CONFIG_ARCH_MXC) += \
 	imx6q-sbc6x.dtb \
 	imx6q-udoo.dtb \
 	imx6q-wandboard.dtb \
-	imx6s-dheva01.dtb \
+	imx6s-dhcom2B-pdk1.dtb \
+	imx6s-dhcom3B-pdk2.dtb \
 	imx6sl-evk.dtb \
 	vf610-cosmic.dtb \
 	vf610-twr.dtb
