--- a/arch/arm/boot/dts/imx6dl-dhcom2B-cfi2-100.dts
+++ b/arch/arm/boot/dts/imx6dl-dhcom2B-cfi2-100.dts
@@ -1,6 +1,5 @@
 /*
- * Copyright 2014 DH electronics GmbH
- * Copyright 2013 Freescale Semiconductor, Inc.
+ * Copyright 2015 DH electronics GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -9,11 +8,41 @@
 
 /dts-v1/;
 
+//******************************************************************************
+// C P U - T Y P E
+//******************************************************************************
 #include "imx6dl.dtsi"
-#include "imx6qdl-dhcom.dtsi"
-#include "imx6qdl-cfi2-100.dtsi"
+
+
+//******************************************************************************
+// D H C O M - M O D U L E
+//******************************************************************************
+
+// Basic configuration
+//**********************************************************
+// HW200 base
+#include "imx6qdl-dhcom2B.dtsi"
+
+// Memory 1GB DDR3 RAM
+/ {
+	memory {
+		reg = <0x10000000 0x40000000>;
+	};
+};
+
+// Special configurations
+//**********************************************************
+// Enables NAND, disables eMMC
+//#include "imx6qdl-dhcom_cfg-nand.dtsi"
+
+
+//******************************************************************************
+// B O A R D - C O N F I G U R A T I O N
+//******************************************************************************
+#include "imx6qdl-dh_cfi2-100.dtsi"
+
 
 / {
 	model = "Freescale i.MX6 DualLite DHCOM CFI2-100";
-	compatible = "fsl,imx6dl-cfi2-100", "fsl,imx6dl";
+	compatible = "fsl,imx6dl-dhcom2B-cfi2-100", "fsl,imx6dl";
 };
