--- a/arch/arm/boot/dts/imx6dl-dhcom3B-cfi2-200.dts
+++ b/arch/arm/boot/dts/imx6dl-dhcom3B-cfi2-200.dts
@@ -11,7 +11,7 @@
 //******************************************************************************
 // C P U - T Y P E
 //******************************************************************************
-#include "imx6q.dtsi"
+#include "imx6dl.dtsi"
 
 
 //******************************************************************************
@@ -20,8 +20,8 @@
 
 // Basic configuration
 //**********************************************************
-// HW200 base
-#include "imx6qdl-dhcom2B.dtsi"
+// HW300 base
+#include "imx6qdl-dhcom3B.dtsi"
 
 // Memory 1GB DDR3 RAM
 / {
@@ -43,6 +43,6 @@
 
 
 / {
-	model = "Freescale i.MX6 Quad DHCOM CFI2-200";
-	compatible = "fsl,imx6q-dhcom2B-cfi2-200", "fsl,imx6q";
+	model = "Freescale i.MX6 DualLite DHCOM CFI2-200";
+	compatible = "fsl,imx6dl-dhcom3B-cfi2-200", "fsl,imx6dl";
 };
