--- a/arch/arm/boot/dts/imx6q-dhcom2B-pdk1.dts
+++ b/arch/arm/boot/dts/imx6q-dhcom2B-pdk1.dts
@@ -1,6 +1,5 @@
 /*
- * Copyright 2014 DH electronics GmbH
- * Copyright 2013 Freescale Semiconductor, Inc.
+ * Copyright 2015 DH electronics GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -9,14 +8,47 @@
 
 /dts-v1/;
 
+//******************************************************************************
+// C P U - T Y P E
+//******************************************************************************
 #include "imx6q.dtsi"
-#include "imx6qdl-dhcom.dtsi"
-// #include "imx6qdl-dhcom-nand.dtsi" // disables eMMC, enables NAND
-// #include "imx6qdl-dhpico1-rs485.dtsi" // enable rs485 for UART2 (ttymxc4) on dhpico1
-// #include "imx6qdl-dhcom-weim.dtsi" // enables WEIM example config with UIO-Driver
-#include "imx6qdl-dheva01.dtsi"
+
+
+//******************************************************************************
+// D H C O M - M O D U L E
+//******************************************************************************
+
+// Basic configuration
+//**********************************************************
+// HW200 base
+#include "imx6qdl-dhcom2B.dtsi"
+
+// Memory 1GB DDR3 RAM
+/ {
+	memory {
+		reg = <0x10000000 0x40000000>;
+	};
+};
+
+// Special configurations
+//**********************************************************
+// Enables NAND, disables eMMC
+//#include "imx6qdl-dhcom_cfg-nand.dtsi"
+
+// Enable RS485 for UART2 (ttymxc4)
+//#include "imx6qdl-dhcom_cfg-rs485.dtsi"
+
+// Eenables WEIM example config with UIO-Driver
+//#include "imx6qdl-dhcom_cfg-weim.dtsi"
+
+
+//******************************************************************************
+// B O A R D - C O N F I G U R A T I O N
+//******************************************************************************
+#include "imx6qdl-dh_pdk1.dtsi"
+
 
 / {
-	model = "Freescale i.MX6 Quad DHCOM Premium Developer Kit";
-	compatible = "fsl,imx6q-dheva01", "fsl,imx6q";
+	model = "Freescale i.MX6 Quad DHCOM Premium Developer Kit (1)";
+	compatible = "fsl,imx6q-dhcom2B-pdk1", "fsl,imx6q";
 };
