--- a/arch/arm/boot/dts/imx6q-dhcom3B-pdk2.dts
+++ b/arch/arm/boot/dts/imx6q-dhcom3B-pdk2.dts
@@ -20,8 +20,8 @@
 
 // Basic configuration
 //**********************************************************
-// HW200 base
-#include "imx6qdl-dhcom2B.dtsi"
+// HW300 base
+#include "imx6qdl-dhcom3B.dtsi"
 
 // Memory 1GB DDR3 RAM
 / {
@@ -35,14 +35,20 @@
 // Enables NAND, disables eMMC
 //#include "imx6qdl-dhcom_cfg-nand.dtsi"
 
+// Enable RS485 for UART2 (ttymxc4)
+//#include "imx6qdl-dhcom_cfg-rs485.dtsi"
+
+// Eenables WEIM example config with UIO-Driver
+//#include "imx6qdl-dhcom_cfg-weim.dtsi"
+
 
 //******************************************************************************
 // B O A R D - C O N F I G U R A T I O N
 //******************************************************************************
-#include "imx6qdl-dh_cfi2-200.dtsi"
+#include "imx6qdl-dh_pdk2.dtsi"
 
 
 / {
-	model = "Freescale i.MX6 Quad DHCOM CFI2-200";
-	compatible = "fsl,imx6q-dhcom2B-cfi2-200", "fsl,imx6q";
+	model = "Freescale i.MX6 Quad DHCOM Premium Developer Kit (2)";
+	compatible = "fsl,imx6q-dhcom3B-pdk2", "fsl,imx6q";
 };
