Device Tree: HW300: Add define to distinguish the cpu type

--- a/arch/arm/boot/dts/imx6d-dhcom2B-pdk1.dts
+++ b/arch/arm/boot/dts/imx6d-dhcom2B-pdk1.dts
@@ -12,6 +12,7 @@
 // C P U - T Y P E
 //******************************************************************************
 #include "imx6d.dtsi"
+#define IMX6_CPU_DUAL_QUAD // Used to distinguish the CPU types
 
 
 //******************************************************************************
