--- a/arch/arm/boot/dts/imx6dl-dhcom3B-cfi2-200.dts
+++ b/arch/arm/boot/dts/imx6dl-dhcom3B-cfi2-200.dts
@@ -12,6 +12,7 @@
 // C P U - T Y P E
 //******************************************************************************
 #include "imx6dl.dtsi"
+#define IMX6_CPU_SOLO_DUALLITE // Used to distinguish the CPU types
 
 
 //******************************************************************************
