--- a/arch/arm/boot/dts/imx6q-dhcom3B-pdk2.dts
+++ b/arch/arm/boot/dts/imx6q-dhcom3B-pdk2.dts
@@ -12,6 +12,7 @@
 // C P U - T Y P E
 //******************************************************************************
 #include "imx6q.dtsi"
+#define IMX6_CPU_DUAL_QUAD // Used to distinguish the CPU types
 
 
 //******************************************************************************
