--- a/arch/arm/boot/dts/imx6qdl-dhcom3B.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-dhcom3B.dtsi
@@ -203,7 +203,7 @@
 		interrupt-parent = <&gpio7>;
 		interrupts = <12 2>;
 		irq-gpios = <&gpio7 12 0>;
-		status = "OK";
+		status = "okay";
 	};
 };
 
