imx6_dhcom_defconfig: Add support for COM-port of Cypress CY7C65215 (USB Modem CDC ACM Support)

--- a/arch/arm/configs/imx6_dhcom_defconfig
+++ b/arch/arm/configs/imx6_dhcom_defconfig
@@ -210,6 +210,7 @@ CONFIG_HID_MULTITOUCH=y
 CONFIG_USB=y
 CONFIG_USB_MON=y
 CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_ACM=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_CHIPIDEA=y
 CONFIG_USB_CHIPIDEA_UDC=y
