--- a/arch/arm/configs/imx6_dhcom_defconfig
+++ b/arch/arm/configs/imx6_dhcom_defconfig
@@ -3,7 +3,6 @@ CONFIG_SYSVIPC=y
 CONFIG_FHANDLE=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
-# CONFIG_RCU_BOOST is not set
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=18
@@ -42,7 +41,7 @@ CONFIG_SOC_IMX6SL=y
 CONFIG_SOC_VF610=y
 CONFIG_SMP=y
 CONFIG_VMSPLIT_2G=y
-CONFIG_PREEMPT_RT_FULL=y
+CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 CONFIG_CMDLINE="noinitrd console=ttymxc0,115200"
 CONFIG_VFP=y
