imx6_dhcom_defconfig: Add BINFMT_MISC to improve Debian Jessie support

--- a/arch/arm/configs/imx6_dhcom_defconfig
+++ b/arch/arm/configs/imx6_dhcom_defconfig
@@ -46,7 +46,7 @@ CONFIG_AEABI=y
 CONFIG_CMDLINE="noinitrd console=ttymxc0,115200"
 CONFIG_VFP=y
 CONFIG_NEON=y
-CONFIG_BINFMT_MISC=m
+CONFIG_BINFMT_MISC=y
 CONFIG_PM_RUNTIME=y
 CONFIG_PM_DEBUG=y
 CONFIG_PM_TEST_SUSPEND=y
